# llm_code

./: .gitignore  AGENTS.md  README_JULES_CLI.md  Readme.md  SECRETS.md  config.yml
.claude/: ralph-loop.local.md
continue/: config.yaml
dall-e/: dalle.py
discord_bot/: BRANCH_README.md  chat_memory.py  config.ini  core.json  discord_bot.py  install.sh  manual_command.txt  readme.md  requirements.txt  requirements_discord.txt  stablediffusion.py
docs/: gpu-config-architecture.md  gpu-config-dev-guide.md
html/: index.html
jules/: README_JULES_CLI.md  __init__.py  jules.py  jules_cli.py  jules_config.ini  requirements.txt  test_jules.py  test_jules_cli.py  test_orchestrator.py  test_plan_parser.py
litellm/: __init__.py  config.yaml
llama.cpp/: CHANGELOG.md  README.md  llama-models.ini  start_llama.bat  start_llama.ps1
manage_ollama/: 30-nvidia_monitor.conf  Readme.md  load_daily_driver_v2.sh  nvidia_monitor.sh  printout_proxy.py  update_models.sh
modelfiles/: cogvideo-artist.openwebui.json  day-deepseek-r1-32.modelfile  day-qwen2.5:32b.modelfile  image_artist.modelfile  lunatic_leivo_model.modelfile  summary-mistral-small.modelfile
perf_testing/: 30k_programming_prompt.py  massive_prompt.txt
piper/: Readme.md  requirements.txt
portal/: index.html  ollamasrv.py  portal.py
rag_system/: rag_app.py  requirements.txt
team_jarvis/: README.md  pyproject.toml
team_jarvis/src/team_jarvis/: crew.py  main.py
tests/: test_sync_ollama_to_litellm.py
update_scripts/: CHANGELOG.md  GPU_config  README.md  deploy.sh  deploy_to_ollama_srv.sh  update_ollama.sh  (+6 more)
(+116 files in other folders)
